# Ultimate-Assistant-AI-Gateway-Backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.daily-logs/: last_update.json
alembic/: env.py
app/: main.py
app/api/v1/: deps.py  router.py
app/api/v1/routes/: admin.py  audio.py  auth.py  chat.py  (+9 more)
app/core/: config.py  exceptions.py  lifespan.py  logging.py  middleware.py  ratelimit.py  security.py  telemetry.py
app/db/: session.py
app/db/repositories/: audit_repo.py  conversation_repo.py  key_repo.py  user_repo.py
app/models/: __init__.py  api_key.py  audit_log.py  base.py  conversation.py  file.py  message.py  usage.py  user.py
app/providers/: base.py  capabilities.py  client_pool.py  registry.py  retry.py
app/providers/anthropic/: adapter.py
app/providers/cohere/: adapter.py
app/providers/deepseek/: adapter.py
app/providers/elevenlabs/: adapter.py
app/providers/fal/: adapter.py
app/providers/google/: adapter.py
app/providers/groq/: adapter.py
app/providers/mistral/: adapter.py
app/providers/ollama/: __init__.py  adapter.py  mapping.py
app/providers/openai/: adapter.py  mapping.py
app/providers/replicate/: adapter.py
app/providers/stability/: adapter.py
app/providers/xai/: adapter.py
app/schemas/: auth.py  chat.py  conversion.py  file.py  key.py  provider.py
app/services/: cache.py  chat_service.py  conversion_service.py  cost_service.py  file_service.py  guardrails.py  key_service.py  pipeline.py  ranker.py  router.py  streaming.py  usage_service.py
app/services/parsers/: docx.py  media.py  pdf.py
app/utils/: ids.py  time.py  tokens.py
app/workers/: worker.py
app/workers/tasks/: batch_transcribe.py  file_processing.py  video_generation.py
scripts/: generate_master_key.py  seed_providers.py
tests/: conftest.py
tests/integration/: test_chat_stream.py  test_conversion.py
tests/unit/: test_capabilities.py  test_key_service.py  test_router.py
